Versão 1.9

-Retirada dos atributos e métodos de Categorias na classe Cliente 
-Criação do menu no Modo Venda 
-Criação de novas funcionalidades no Modo Venda
-Criação dos atributos Telefone e Socio na classe Cliente
-Criação de sobrecarga na classe Cliente.

----------------------------------------------------------------------------
Versão 1.8

-Retirei Tipo de Produtos
-Passe o modo estoque para a função Estoque();
-Corrigi um bug no modo estoque: criação de produtos mesmo se a categoria não existe.
-Agora o arquivo Estoque.txt só contém o nome dos produtos
-Cada produto tem um arquivo próprio, contendo os seguintes dados: quantidade, preço e categorias.
-A opção de listar produtos no modo estoque foi modificada.
-Criada a opção de editar preços no modo estoque.

----------------------------------------------------------------------------
Versão 1.7

-Sistema de cadastro de clientes corrigido

----------------------------------------------------------------------------
Versão 1.6

-Criação da classe Carrinho
-Modificações na classe Cliente
-Criação do Modo Venda
-Sistema de cadastro de clientes criado, mas incompleto

-----------------------------------------------------------------------------
Versão 1.5

-Código do Modo Estoque otimizado

------------------------------------------------------------------------------
Versão 1.4

-Modo Estoque concluído

------------------------------------------------------------------------------
Versão 1.3

-Modo Estoque consegue copiar arquivos.

------------------------------------------------------------------------------
Versão 1.2

-Desenvolvi mais o Modo Estoque

------------------------------------------------------------------------------
Versão 1.1

-Removi o atributo "Tipo_de_Produtos" na classe Categoria
-Removi os métodos e códigos relacionados à ao atributo removido
-Implementei um jeito de verificar se o produto já foi registado no Modo Estoque